--- a/.github/workflows/IMwrt-24.10.yml
+++ b/.github/workflows/IMwrt-24.10.yml
@@ -19,8 +19,8 @@ on:
       upload_bin_dir:
         description: '上传 bin 目录'
         type: boolean
-        required: false
-        default: false
+        required: true
+        default: true
   schedule:
     - cron: '0 7 * * 5'  # 每周五 UTC 时间 07:00 运行（北京时间 15:00）
 
