--- a/.github/workflows/IMwrt-24.10.yml
+++ b/.github/workflows/IMwrt-24.10.yml
@@ -351,18 +351,24 @@ jobs:
           EOF
           echo "status=success" >> $GITHUB_OUTPUT
 
+
+      - name: 调试输出
+        run: |
+          echo "FIRMWARE路径: ${{ env.FIRMWARE }}"
+          echo "TAG状态: ${{ steps.tag.outputs.status }}"
+          ls -la ${{ env.FIRMWARE }}/
+          
       - name: 发布固件
         uses: softprops/action-gh-release@v2.1.0
-        if: steps.tag.outputs.status == 'success'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ steps.tag.outputs.RELEASE_TAG }}
+          tag_name: ${{ steps.tag.outputs.RELEASE_TAG || github.ref_name }}
           body_path: release.txt
           files: ${{ env.FIRMWARE }}/*sysupgrade.bin
-          prerelease: false             # 设为正式发布
-          make_latest: true             # 标记为最新版本
-            
+          prerelease: false
+          make_latest: true
+        
       - name: 检查 WebDAV 凭证
         if: steps.compile.outputs.status == 'success' && env.WEBDAV_URL && env.WEBDAV_USERNAME && env.WEBDAV_PASSWORD
         run: |
