--- a/.github/workflows/IMwrt-24.10-6.6.yml
+++ b/.github/workflows/IMwrt-24.10-6.6.yml
@@ -253,7 +253,18 @@ jobs:
           else
             echo "source_changed=false" >> $GITHUB_OUTPUT
           fi
-      
+
+      - name: SSH链接管理
+        uses: P3TERX/ssh2actions@v1.0.0
+        if: (github.event.inputs.ssh == 'true')
+
+      - name: 上传 .config
+        uses: actions/upload-artifact@v4
+        if: (github.event.inputs.ssh == 'true')
+        with:
+          name: OpenWrt_config
+          path: openwrt/config
+          
       - name: 编译固件
         id: compile
         timeout-minutes: 180
@@ -271,13 +282,6 @@ jobs:
           echo "status=success" >> $GITHUB_OUTPUT
           echo "DEVICE_NAME=_${{ matrix.device_model }}" >> $GITHUB_ENV
           echo "FILE_DATE=_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
-
-      - name: SSH链接管理
-        uses: P3TERX/ssh2actions@v1.0.0
-        if: (github.event.inputs.ssh == 'true')
-        env:
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           
       - name: 上传编译日志
         if: failure()
