--- a/.github/workflows/IMwrt-24.10-6.6.yml
+++ b/.github/workflows/IMwrt-24.10-6.6.yml
@@ -32,8 +32,7 @@ on:
         type: boolean
         required: true
         default: false
-  # schedule:
-  #   - cron: '40 15 * * *'  # test
+    - cron: '0 7 * * 5'  # 每周五 UTC 时间 07:00 运行（北京时间 15:00）
 
 permissions:
   contents: write
@@ -210,7 +209,7 @@ jobs:
         run: |
           [ -e files ] && mv files openwrt/files
           [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
-          echo "CONFIG_TARGET_mediatek_mt7981_DEVICE_${{ matrix.device_model }}=y" >> openwrt/.config
+          # echo "CONFIG_TARGET_mediatek_mt7981_DEVICE_${{ matrix.device_model }}=y" >> openwrt/.config
           chmod +x $DIY_P2_SH
           cd openwrt
           $GITHUB_WORKSPACE/$DIY_P2_SH
