--- a/.github/workflows/IMwrt-24.10-6.6.yml
+++ b/.github/workflows/IMwrt-24.10-6.6.yml
@@ -24,9 +24,16 @@ on:
       repo_url:
         description: '源仓库 URL'
         default: 'https://github.com/padavanonly/immortalwrt-mt798x-24.10'
+        type: choice
+        options:
+          - 'https://github.com/padavanonly/immortalwrt-mt798x-24.10'
       repo_branch:
         description: '源仓库分支'
         default: 'openwrt-24.10-6.6'
+        type: choice
+        options:
+          - 'openwrt-24.10-6.6'
+          - '2410'
       ssh:
         description: 'SSH connection to Actions'
         type: boolean
@@ -41,7 +48,7 @@ env:
   REPO_URL: ${{ github.event.inputs.repo_url || 'https://github.com/padavanonly/immortalwrt-mt798x-24.10' }}
   REPO_BRANCH: ${{ github.event.inputs.repo_branch || 'openwrt-24.10-6.6' }}
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: 24.10-6.6.config
+  CONFIG_FILE: 24.10.config
   DIY_P1_SH: scripts/diy-part1.sh
   DIY_P2_SH: scripts/diy-part2.sh
   UPLOAD_FIRMWARE: true
