--- a/.github/workflows/IMwrt-24.10-6.6.yml
+++ b/.github/workflows/IMwrt-24.10-6.6.yml
@@ -221,7 +221,7 @@ jobs:
       - name: 加载配置
         run: |
           [ -e files ] && mv files openwrt/files
-          [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
+          [ -e config/$CONFIG_FILE ] && mv config/$CONFIG_FILE openwrt/.config
           # echo "CONFIG_TARGET_mediatek_mt7981_DEVICE_${{ matrix.device_model }}=y" >> openwrt/.config
           chmod +x $DIY_P2_SH
           cd openwrt
@@ -276,7 +276,7 @@ jobs:
         with:
           name: OpenWrt_config
           path: openwrt/config
-          
+
       - name: 编译固件
         id: compile
         timeout-minutes: 180
@@ -294,7 +294,7 @@ jobs:
           echo "status=success" >> $GITHUB_OUTPUT
           echo "DEVICE_NAME=_${{ matrix.device_model }}" >> $GITHUB_ENV
           echo "FILE_DATE=_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
-          
+
       - name: 上传编译日志
         if: failure()
         uses: actions/upload-artifact@v4
@@ -355,11 +355,11 @@ jobs:
             echo "Missing required variables"
             exit 1
           fi
-          
+
           # 生成标签
           TAG="ImmortalWrt-24.10-${{ matrix.device_model }}-${{ env.FIRMWARE_VERSION }}"
           echo "RELEASE_TAG=$TAG" >> $GITHUB_OUTPUT
-          
+
           # 生成发布说明
           {
             echo "固件版本: ImmortalWrt ${{ env.FIRMWARE_VERSION }}"
@@ -369,9 +369,9 @@ jobs:
             echo -e "\n### 更新内容"
             git log --pretty=format:"- %s" -n 5
           } > release.txt
-          
+
           echo "status=success" >> $GITHUB_OUTPUT
-      
+
       - name: 验证Release创建
         run: |
           curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
@@ -382,7 +382,7 @@ jobs:
           echo "FIRMWARE路径: ${{ env.FIRMWARE }}"
           echo "TAG状态: ${{ steps.tag.outputs.status }}"
           ls -la ${{ env.FIRMWARE }}/
-          
+
       - name: 发布固件
         id: create_release
         uses: actions/create-release@v1
