--- a/.github/workflows/IMwrt-24.10-6.6.yml
+++ b/.github/workflows/IMwrt-24.10-6.6.yml
@@ -383,7 +383,7 @@ jobs:
           echo "TAG状态: ${{ steps.tag.outputs.status }}"
           ls -la ${{ env.FIRMWARE }}/
 
-      - name: 发布固件
+      - name: 创建发布
         id: create_release
         uses: actions/create-release@v1
         if: steps.tag.outputs.status == 'success'
@@ -393,9 +393,19 @@ jobs:
           tag_name: ${{ steps.tag.outputs.RELEASE_TAG }}
           release_name: ${{ steps.tag.outputs.RELEASE_TAG }}
           body_path: release.txt
-          files: ${{ env.FIRMWARE }}/*sysupgrade.bin
           draft: false
           prerelease: false
+          
+      - name: 上传固件
+        uses: actions/upload-release-asset@v1
+        if: steps.create_release.outputs.id
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ${{ env.FIRMWARE }}/*sysupgrade.bin
+          asset_name: firmware.bin
+          asset_content_type: application/octet-stream
 
       - name: 检查 WebDAV 凭证
         if: steps.compile.outputs.status == 'success' && env.WEBDAV_URL && env.WEBDAV_USERNAME && env.WEBDAV_PASSWORD
