--- a/.github/workflows/IMwrt-24.10-6.6.yml
+++ b/.github/workflows/IMwrt-24.10-6.6.yml
@@ -358,7 +358,7 @@ jobs:
 
           # 生成标签
           TAG="ImmortalWrt-24.10-${{ matrix.device_model }}-${{ env.FIRMWARE_VERSION }}"
-          echo "RELEASE_TAG=$TAG" >> $GITHUB_OUTPUT
+          echo "RELEASE_TAG=$TAG-$(date +%Y%m%d%H%M%S)" >> $GITHUB_OUTPUT
 
           # 生成发布说明
           {
@@ -371,11 +371,6 @@ jobs:
           } > release.txt
 
           echo "status=success" >> $GITHUB_OUTPUT
-
-      - name: 验证Release创建
-        run: |
-          curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-          https://api.github.com/repos/${{ github.repository }}/releases/tags/${{ steps.tag.outputs.RELEASE_TAG }} | jq .
 
       - name: 调试输出
         run: |
@@ -395,7 +390,17 @@ jobs:
           body_path: release.txt
           draft: false
           prerelease: false
-          
+
+      - name: 验证Release创建
+        run: |
+          curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+          https://api.github.com/repos/${{ github.repository }}/releases/tags/${{ steps.tag.outputs.RELEASE_TAG }} | jq .
+          if [ $? -ne 0 ]; then
+            echo "错误：Release 创建失败"
+            exit 1
+          fi
+          echo "Release 创建成功: ${{ steps.tag.outputs.RELEASE_TAG }}"
+
       - name: 上传固件
         uses: actions/upload-release-asset@v1
         if: steps.create_release.outputs.id
