--- a/.github/workflows/IMwrt-24.10-6.6.yml
+++ b/.github/workflows/IMwrt-24.10-6.6.yml
@@ -392,16 +392,6 @@ jobs:
       #     draft: false
       #     prerelease: false
 
-      # - name: 验证Release创建
-      #   run: |
-      #     curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-      #     https://api.github.com/repos/${{ github.repository }}/releases/tags/${{ steps.tag.outputs.RELEASE_TAG }} | jq .
-      #     if [ $? -ne 0 ]; then
-      #       echo "错误：Release 创建失败"
-      #       exit 1
-      #     fi
-      #     echo "Release 创建成功: ${{ steps.tag.outputs.RELEASE_TAG }}"
-
       # - name: 上传固件
       #   uses: actions/upload-release-asset@v1
       #   if: steps.create_release.outputs.id
@@ -430,6 +420,16 @@ jobs:
           files: ${{ env.FIRMWARE }}/*sysupgrade.bin
           prerelease: false
           make_latest: true
+
+      - name: 验证Release创建
+        run: |
+          curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+          https://api.github.com/repos/${{ github.repository }}/releases/tags/${{ steps.tag.outputs.RELEASE_TAG }} | jq .
+          if [ $? -ne 0 ]; then
+            echo "错误：Release 创建失败"
+            exit 1
+          fi
+          echo "Release 创建成功: ${{ steps.tag.outputs.RELEASE_TAG }}"
 
       - name: 检查 WebDAV 凭证
         if: steps.compile.outputs.status == 'success' && env.WEBDAV_URL && env.WEBDAV_USERNAME && env.WEBDAV_PASSWORD
