--- a/.github/workflows/IMwrt-24.10-6.6.yml
+++ b/.github/workflows/IMwrt-24.10-6.6.yml
@@ -47,6 +47,9 @@ on:
         required: true
         default: false
 
+  schedule:
+    - cron: '0 4 * * *'  # 北京时间每天12:00
+
 permissions:
   contents: write
   actions: write
