添加上传固件时的资产名称，以确保正确命名 sysupgrade.bin 文件

--- a/.github/workflows/IMwrt-24.10-6.6.yml
+++ b/.github/workflows/IMwrt-24.10-6.6.yml
@@ -426,6 +426,7 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ${{ env.FIRMWARE }}/*sysupgrade.bin
+          asset_name: cmcc_rax3000m-emmc_sysupgrade.bin
           asset_content_type: application/octet-stream
 
       - name: 验证Release创建
