--- a/config/24.10-6.6.config
+++ b/config/24.10-6.6.config
@@ -220,8 +220,8 @@ CONFIG_PCIE_SUPPORT=y
 CONFIG_USB_SUPPORT=y
 CONFIG_RTC_SUPPORT=y
 CONFIG_USES_DEVICETREE=y
-CONFIG_USES_INITRAMFS=y
-CONFIG_USES_SEPARATE_INITRAMFS=y
+# CONFIG_USES_INITRAMFS is not set
+# CONFIG_USES_SEPARATE_INITRAMFS is not set
 CONFIG_USES_SQUASHFS=y
 CONFIG_EMMC_SUPPORT=y
 CONFIG_NAND_SUPPORT=y
@@ -234,18 +234,18 @@ CONFIG_ARCH="aarch64"
 #
 # Target Images
 #
-CONFIG_TARGET_ROOTFS_INITRAMFS=y
+# CONFIG_TARGET_ROOTFS_INITRAMFS is not set
 # CONFIG_TARGET_INITRAMFS_COMPRESSION_NONE is not set
 # CONFIG_TARGET_INITRAMFS_COMPRESSION_GZIP is not set
 # CONFIG_TARGET_INITRAMFS_COMPRESSION_BZIP2 is not set
 # CONFIG_TARGET_INITRAMFS_COMPRESSION_LZMA is not set
 # CONFIG_TARGET_INITRAMFS_COMPRESSION_LZO is not set
 # CONFIG_TARGET_INITRAMFS_COMPRESSION_LZ4 is not set
-CONFIG_TARGET_INITRAMFS_COMPRESSION_XZ=y
+# CONFIG_TARGET_INITRAMFS_COMPRESSION_XZ is not set
 # CONFIG_TARGET_INITRAMFS_COMPRESSION_ZSTD is not set
 CONFIG_EXTERNAL_CPIO=""
 # CONFIG_TARGET_INITRAMFS_FORCE is not set
-CONFIG_TARGET_ROOTFS_INITRAMFS_SEPARATE=y
+# CONFIG_TARGET_ROOTFS_INITRAMFS_SEPARATE is not set
 
 #
 # Root filesystem archives
