修复上传固件条件，移除对创建发布步骤的依赖

--- a/.github/workflows/IMwrt-24.10-6.6.yml
+++ b/.github/workflows/IMwrt-24.10-6.6.yml
@@ -421,7 +421,7 @@ jobs:
           echo "found=true" >> $GITHUB_OUTPUT
 
       - name: 上传固件到 Release
-        if: steps.create_release.outputs.id && steps.find_firmware.outputs.found == 'true'
+        if: steps.find_firmware.outputs.found == 'true'
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
