Implement code changes to enhance functionality and improve performance

--- a/.github/workflows/IMwrt-24.10-6.6.yml
+++ b/.github/workflows/IMwrt-24.10-6.6.yml
@@ -41,6 +41,7 @@ on:
         options:
           - '24.10-6.6.config'
           - '2410.config'
+          - '2410-custom.config'
           - 'mt7981-ax3000.config'
       ssh:
         description: 'SSH connection to Actions'
